# aleo-psd8-wasm

./: Cargo.toml  test.txt
src/: lib.rs
