[package]
name = "react-bhp256"
version = "0.16.6"
authors = ["Timur Bartenev"]
description = "WASM for bhp256"
# homepage = "https://aleo.org"
# repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge",
]
categories = [
  "compilers",
  "cryptography",
  "mathematics",
  "wasm",
  "web-programming",
]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.rand]
version = "0.8"
default-features = false

[dependencies.serde]
version = "1.0.188"
default-features = false
features = ["derive"]

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dependencies]
aleo-rust = "0.5.5"
anyhow = "1.0.72"
once_cell = "1.18.0"
snarkvm = "0.14.6"

[dev-dependencies.wasm-bindgen-test]
version = "0.3.37"
